--- a/lw.html.html
+++ b/lw.html.html
@@ -5,7 +5,7 @@
   <title>Local Weather FREE CODE CAMP int. project 2</title>
   
   
-  <link rel='stylesheet prefetch' href='http://codepen.io/Tlandis/pen/JbPPjv.css'>
+  <link rel='stylesheet prefetch' href='https://codepen.io/Tlandis/pen/JbPPjv.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
   
