--- a/rqg.html
+++ b/rqg.html
@@ -36,10 +36,10 @@
   <button class="btn btn-block btn-info sassy tweetThatTrash" id="tweetThatTrash">Tweet That</button>
     </div> </div>
 </html>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-      <script src="js/index.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+      <script src="js/rqg.js"></script>
 
 </body>
 </html>
