--- a/rqg.html
+++ b/rqg.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://codepen.io/Tlandis/pen/JbPPjv.css'>
+<link rel='stylesheet prefetch' href='http://codepen.io/Tlandis/pen/JbPPjv.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
@@ -17,7 +17,7 @@
   <html>
   <div class="box">
 <div class="sassy">
-  <img id="question" src="https://tech-24.pl/allegro/tech24/pytania.jpg">
+  <img id="question" src="http://tech-24.pl/allegro/tech24/pytania.jpg">
 </div>
 <div class="container-fluid sassy">
   <h1 class="sassy"> Give me something to think about... </h1>
