--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  Tom Landis</title>
+  <title>Tom Landis is learning web development</title>
   
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='http://codepen.io/Tlandis/pen/JbPPjv.css'>
+
 
       <link rel="stylesheet" href="css/style.css">
 
