--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Tom Landis is learning web development</title>
   
-  
+  <link rel='stylesheet prefetch' href='http://codepen.io/Tlandis/pen/JbPPjv.css'>// 
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
 
@@ -22,9 +22,9 @@
 <button class="btn btn-primary" id="lw">Local Weather</button>
 <button  class="btn btn-primary" id="rqg">Random quote Generator</button>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
       <script src="js/index.js"></script>
 
 </body>
