--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Tom Landis is learning web development</title>
   
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 
 
       <link rel="stylesheet" href="css/style.css">
