--- a/rqg.html
+++ b/rqg.html
@@ -39,7 +39,7 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-      <script src="rqg.js"></script>
+      <script src="js/rqg.js"></script>
 
 </body>
 </html>
