--- a/lw.html
+++ b/lw.html
@@ -5,7 +5,12 @@
   <title>Local Weather FREE CODE CAMP int. project 2</title>
   
 
-      
+      <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+
+
+      <link rel="stylesheet" href="css/style.css">
   
 </head>
 
