--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <button class="btn btn-primary" id="lw">Local Weather</button>
 <button  class="btn btn-primary" id="rqg">Random quote Generator</button>
+  <button class="btn btn-primary" id="wv">Wikipedia Viewer</button>
 </div>
 
     
