--- a/wv.html
+++ b/wv.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/style1.css">
 
   
 </head>
@@ -17,7 +17,7 @@
 </head>
 
 <div class="container">
-  <img src="http://i.kinja-img.com/gawker-media/image/upload/t_original/dvfqfmn2zx4e4bbkqwum.jpg" class="image-responsive"> </img>
+  <img src="wiki.jpg" class="image-responsive"> </img>
   <h2>Wikipedia: helping you win arguments since 2001</h2>
 
 </div>
@@ -69,7 +69,7 @@
           </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/wv.js"></script>
 
 </body>
 </html>
