--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Tom Landis is learning web development</title>
+  <title>Tom is learning web development</title>
   
 
 
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/style1.css">
 
   
 </head>
