--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <title>Tom is learning web development</title>
   
 
+ <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
 
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
+
+     
 
   
 </head>
