--- a/calc.html
+++ b/calc.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="calc.style.css">
+      <link rel="stylesheet" href="css/style.css">
 
   
 </head>
@@ -15,6 +15,9 @@
 <body>
   
 <title>Numbers and Math!</title>
+<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+
+<body background="wood.jpg">
 <h1> For your consideration: </h1> <h4> A javaScript calculator that sort of works <em>sometimes.</em></h4>
 
 <div class="middle" id="table">
@@ -59,7 +62,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="calc.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
