--- a/calc.html
+++ b/calc.html
@@ -7,15 +7,15 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
-
+      <link rel="stylesheet" href="calc.style.css">
+<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   
 </head>
 
 <body>
   
 <title>Numbers and Math!</title>
-<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+
 
 <body background="wood.jpg">
 <h1> For your consideration: </h1> <h4> A javaScript calculator that sort of works <em>sometimes.</em></h4>
@@ -62,7 +62,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="calc.js"></script>
 
 </body>
 </html>
