--- a/twitch.html
+++ b/twitch.html
@@ -7,14 +7,13 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
-
+      <link rel="stylesheet" href="css/twitch.style.css">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   
 </head>
 
 <body>
-  <head>
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> </head>
+
 
 <div id="header">
   <h1> What FCC is watching: </h1>
@@ -92,7 +91,7 @@
 <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/twitch.js"></script>
 
 </body>
 </html>
