--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <button class="btn btn-primary" id="wv">Wikipedia Viewer</button>
    <button class="btn btn-primary" id="twitch">Twitch.tv</button>
    <button class="btn btn-primary" id="calc">JavaScript Calculator</button>
+  <button class="btn btn-primary" id="timer">Pomodoro Timer</button>
 </div>
 
     
