--- a/twitch.html
+++ b/twitch.html
@@ -16,6 +16,7 @@
 
 
 <div id="header">
+  <a href="twitch.png"></a>
   <h1> What FCC is watching: </h1>
 </div>
 <div class="container-fluid" id="buttons">
