--- a/twitch.html
+++ b/twitch.html
@@ -16,7 +16,7 @@
 
 
 <div id="header">
-  <a href="twitch.png"></a>
+  <img src="twitch.png"></img>
   <h1> What FCC is watching: </h1>
 </div>
 <div class="container-fluid" id="buttons">
