--- a/twitch.html
+++ b/twitch.html
@@ -17,7 +17,7 @@
 
 <div id="header">
   <div class="center">
-  <img src="twitch.png"></img></div>
+  <img class="center" src="twitch.png"></img></div>
   <h1> What FCC is watching: </h1>
 </div>
 <div class="container-fluid" id="buttons">
