--- a/twitch.html
+++ b/twitch.html
@@ -17,9 +17,9 @@
 
 <div id="header">
   <div class="center">
-  <img class="center" src="twitch.png"></img></div>
+  <img class="center" src="twitch.png"></div>
   <h1> What FCC is watching: </h1>
-</div>
+</div></img>
 <div class="container-fluid" id="buttons">
   <button class="btn btn-primary" id="online">Online</button>
   <button class="btn btn-danger" id="offline">Offline</button>
