--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-  <script src="portfolio.js"></script>
+  <script src="index.js"></script>
     
 </body>
 </html>
