--- a/simon.html
+++ b/simon.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/simon.style.css">
 
   
 </head>
@@ -30,7 +30,7 @@
   <div> <h2><a id="onOff"><span id="on">ON</span> / <span id="off"> OFF</span></a> | count: <span id="count"> 00 |</span><a id="strict">  strict</a></h2></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/simon.js"></script>
 
 </body>
 </html>
