--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     </div>
     <div id="calc">
-        <img  class="img-responsive img-thumbnail right"  src="calc.png"> <p id="calcD">I made this stylish calculator for free code camp's front-end developer certificate.  It uses jQuery and bootstrap and features simple yet elegant style</p>
+        <img  class="img-responsive img-thumbnail right"  src="https://www.dropbox.com/s/cl6reuk0mtvsyog/calc2.png?dl=1"> <p id="calcD">I made this stylish calculator for free code camp's front-end developer certificate.  It uses jQuery and bootstrap and features simple yet elegant style</p>
      </div>
     <div><img class="img-responsive img-thumbnail left"  src="pomo.png"><p id="pomoD">This pomodoro productivity timer features simple easy to use design.  It was another advaced front end development project.</p>
  </div> 
