--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
  </div> 
 
     </div>  <div id="twitch" class ="parallax1">
-    <img src="twitchy.png" class="img-responsive img-thumbnail right" id= "twitchy"> 
+    <img src="twitch.png" class="img-responsive img-thumbnail right" id= "twitchy"> 
       <p id="twitchD">A web app that uses an API call to gather current information on streaming programs on twitch.tv.</p> 
-  <div  id="wv"> <img src="wiki.png" > <p id="wikiD"> This wikipedia viewer App makes use of Wikipedia's API to fetch relevant search results.</p> </div> 
+  <div  id="wv"> <img src="wiki.jpg" > <p id="wikiD"> This wikipedia viewer App makes use of Wikipedia's API to fetch relevant search results.</p> </div> 
    
     
 
