--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
 
-      <link rel="stylesheet" href="index.style.css">
+      <link rel="stylesheet" href="css/index.style.css">
 
      
 
@@ -36,9 +36,9 @@
  </div> 
 
     </div>  <div id="twitch" class ="parallax1">
-    <img src="twitch.png" class="img-responsive img-thumbnail right" id= "twitchy"> 
+    <img src="https://www.dropbox.com/s/n8fg3f08lh83lti/twitchy.png?dl=1" class="img-responsive img-thumbnail right" id= "twitchy"> 
       <p id="twitchD">A web app that uses an API call to gather current information on streaming programs on twitch.tv.</p> 
-  <div  id="wv"> <img src="wiki.jpg" > <p id="wikiD"> This wikipedia viewer App makes use of Wikipedia's API to fetch relevant search results.</p> </div> 
+  <div  id="wv"> <img src="https://www.dropbox.com/s/0xozot35l8ii8m3/wiki.png?dl=1" > <p id="wikiD"> This wikipedia viewer App makes use of Wikipedia's API to fetch relevant search results.</p> </div> 
    
     
 
