--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
 </div>
-
+  <div id="rqg"> <img src="thinker.jpg"> <p>This is a random quote generator that calls to an API and delivers an inspiring quote. </p></div>
     
   
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
