--- a/calc.html
+++ b/calc.html
@@ -62,7 +62,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="calc.js"></script>
+    <script src="js/calc.js"></script>
 
 </body>
 </html>
