--- a/wv.html
+++ b/wv.html
@@ -7,33 +7,15 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style1.css">
-
+      <link rel="stylesheet" href="css/wvstyle.css">
   
 </head>
 
 <body>
   <head><link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<div class="container">
-  <img src="wiki.jpg" class="image-responsive"> </img>
-  <h2>Wikipedia: helping you win arguments since 2001</h2>
-
-</div>
-
-<div>
-  <button class="btn btn-success btn-lg center-block" id="rwa">Random Widipedia Article</button>
-
-</div>
-</div>
-
-<div class='container'>
-  <div class="input-group">
-    <input type="text" class="form-control center-block " id="userInput" placeholder="Search for...">
-    <span class="input-group-btn">
-        <button id="go" class="btn btn-info" type="button">Go!</button>
-        </div>
         <div id="results">
       
 
@@ -66,7 +48,26 @@
  
         <div id="results9">
       </div>
+<div class="container">
+  <img src="http://i.kinja-img.com/gawker-media/image/upload/t_original/dvfqfmn2zx4e4bbkqwum.jpg" class="image-responsive"> </img>
+  <h2>Wikipedia: helping you win arguments since 2001</h2>
+
+</div>
+
+<div>
+  <button class="btn btn-success btn-lg center-block" id="rwa">Random Widipedia Article</button>
+
+</div>
+</div>
+
+
           </div>
+<div class='container'>
+  <div class="input-group">
+    <input type="text" class="form-control center-block " id="userInput" placeholder="Search for...">
+    <span class="input-group-btn">
+        <button id="go" class="btn btn-info" type="button">Go!</button>
+        </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
     <script src="js/wv.js"></script>
