--- a/timer.html
+++ b/timer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Pomodoro Clock</title>
   
-  
+  <link href="https://fonts.googleapis.com/css?family=Frijole" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/timer.style.css">
