--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
   <section class="et-hero-tabs">
      <h1>Tom L@is</h1>
-    <h3>Web Developer for hire.</h3>
+    <h3>Web Developer and IT Pro.</h3>
        
    
     <div class="et-hero-tabs-container">
